--- a/fsservice-server/pom.xml
+++ b/fsservice-server/pom.xml
@@ -45,6 +45,7 @@
 						<includes>
 						  <include>Dockerfile</include>
 						  <include>deployment.yaml</include>
+						  <include>logging.properties</include>
 						</includes>
 						<filtering>true</filtering>
 					</resource>
