--- a/fsservice-server/deployment.yaml
+++ b/fsservice-server/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: fsservice-server-deployment
 spec:
   replicas: 2
+  selector: fsservice-server
   template:
     metadata:
       labels:
