k8s prep - corrected deployment selector

--- a/fsservice-server/deployment.yaml
+++ b/fsservice-server/deployment.yaml
@@ -4,7 +4,9 @@ metadata:
   name: fsservice-server-deployment
 spec:
   replicas: 2
-  selector: fsservice-server
+  selector: 
+    matcLabels:
+      app: fsservice-server
   template:
     metadata:
       labels:
