--- a/fsservice-server/deployment.yaml
+++ b/fsservice-server/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   replicas: 2
   selector: 
-    matcLabels:
+    matchLabels:
       app: fsservice-server
   template:
     metadata:
