--- a/fsservice-server/deployment.yaml
+++ b/fsservice-server/deployment.yaml
@@ -22,13 +22,15 @@ metadata:
   name: fsservice-service
   labels:
     app: fsservice-service
+  annotations:
+    cloud.google.com/app-protocols: '{"http2":"HTTP2"}'
 spec:
   type: NodePort
   ports:
     # the port that this service should serve on
-    - port: 80
+    - port: 443
       targetPort: 8080
-      name: http
+      name: http2
   # label keys and values that must match in order to receive traffic for this service
   selector:
     app: fsservice-server
@@ -37,7 +39,16 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: fsservice-ingress
+  #annotate to configure the IBM ALB (which is a nginx) to pass-through SSL as required by HTTP2
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
+  tls:
+  - hosts: 
+    - det-rigtige-cluster.us-south.containers.appdomain.cloud
+    secretName: det-rigtige-cluster
   rules:
   - host: det-rigtige-cluster.us-south.containers.appdomain.cloud
     http:
@@ -45,4 +56,4 @@ spec:
       - path: /fsservice
         backend:
           serviceName: fsservice-service
-          servicePort: 80
+          servicePort: 443
