--- a/fsservice-server/deployment.yaml
+++ b/fsservice-server/deployment.yaml
@@ -23,14 +23,14 @@ metadata:
   labels:
     app: fsservice-service
   annotations:
-    cloud.google.com/app-protocols: '{"http2":"HTTP2"}'
+    cloud.google.com/app-protocols: '{"fsservice-grpc":"HTTP2"}'
 spec:
   type: NodePort
   ports:
     # the port that this service should serve on
     - port: 443
       targetPort: 8080
-      name: http2
+      name: fsservice-grpc
   # label keys and values that must match in order to receive traffic for this service
   selector:
     app: fsservice-server
@@ -44,6 +44,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
     #ingress.bluemix.net/tcp-ports: "serviceName=fsservice-service ingressPort=443 servicePort=443"
 spec:
   tls:
@@ -54,7 +55,6 @@ spec:
   - host: det-rigtige-cluster.us-south.containers.appdomain.cloud
     http:
       paths:
-      - path: /
-        backend:
+      - backend:
           serviceName: fsservice-service
-          servicePort: 443
+          servicePort: fsservice-grpc
