--- a/fsservice-server/src/main/resources/deployment.yaml
+++ b/fsservice-server/src/main/resources/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: fsservice-server
-        image: soprasteria/fsservice:0.0.1-SNAPSHOT
+        image: soprasteria/fsservice:${project.version}
 ---
 apiVersion: v1
 kind: Service
